--- a/package.json
+++ b/package.json
@@ -6,23 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jest": "^29.2.4",
     "ethers": "^5.7.2",
+    "jsdom": "^20.0.3",
     "next": "13.0.5",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
     "@rocketseat/eslint-config": "^1.1.3",
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.3.1",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.3"
